@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-09-19T08:13:43Z",
+  "timestamp" : "2022-09-20T16:08:43Z",
   "count_outdated" : 612,
   "uniques_outdated" : 125,
-  "count" : 640,
-  "uniques" : 130,
+  "count" : 641,
+  "uniques" : 131,
   "views" : [
     {
       "timestamp": "2022-09-08T00:00:00Z",
@@ -28,6 +28,13 @@
     },
     {
       "timestamp": "2022-09-18T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-09-20T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "uniques": 1,
