@@ -1,6 +1,6 @@
 {
-  "count": 28,
-  "uniques": 3,
+  "count": 29,
+  "uniques": 4,
   "views": [
     {
       "timestamp": "2022-09-08T00:00:00Z",
@@ -19,6 +19,11 @@
     },
     {
       "timestamp": "2022-09-18T00:00:00Z",
+      "count": 1,
+      "uniques": 1
+    },
+    {
+      "timestamp": "2022-09-20T00:00:00Z",
       "count": 1,
       "uniques": 1
     }
