@@ -1,3 +1,11 @@
+2022-09-20T16:08:43Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3091671761
+* notice: last 14d: unq all: 4 29
+* notice: prev accum: outdated-unq outdated-all / unq all: 125 612 / 130 640
+* notice: next accum: outdated-unq outdated-all / unq all: 125 612 / 131 641
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2022-09-20]
+
 2022-09-19T08:13:43Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81/andry81/actions/runs/3080875050
 * notice: last 14d: unq all: 3 28
